--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Anuj Shah"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "M.Tech student at IIIT Bangalore | Interested in Machine Learning, Artificial Intelligence, Speech Recognition"
+  bio              : "M.Tech student at IIIT Bangalore Interested in Machine Learning, Artificial Intelligence, Speech Recognition"
   location         : "Bangalore, India"
   email            :
   links:
