Added bio image

--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "Anuj Shah"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/bio.jpg"
   bio              : "M.Tech student at IIIT Bangalore Interested in Machine Learning, Artificial Intelligence, Speech Recognition"
   location         : "Bangalore, India"
   email            :
