--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "Anuj Shah"
-  avatar           : "/assets/images/bio.jpg"
+  avatar           : ""
   bio              : "M.Tech student at IIIT Bangalore Interested in Machine Learning, Artificial Intelligence, Speech Recognition"
   location         : "Bangalore, India"
   email            :
