--- a/_config.yml
+++ b/_config.yml
@@ -290,7 +290,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: archive
+      layout: single
       author_profile: false
       read_time: true
       comments: # true
