Changes to bio and about me

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Anuj Shah"
   avatar           : "/assets/images/bio.jpg"
-  bio              : "M.Tech student at IIIT Bangalore Interested in Machine Learning, Artificial Intelligence, Speech Recognition"
+  bio              : "Software Engineer at Microsoft Interested in building maintainable software, Machine Learning and Speech Recognition"
   location         : "Bangalore, India"
   email            :
   links:
